add individual posts view

--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -17,7 +17,7 @@
 {{#each comments as |comment| }}
 <div class="card">
   <p>
-    {{content}}
+    {{comment_text}}
   </p>
   <p>Created by {{user.username}} on {{format_date date_created}}</p>
 </div>
