--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -38,7 +38,8 @@
         <h4><a href="/post/{{post.id}}">{{post.title}}</a></h4>
       </div>
       <div class="col-md-4">
-        <button class="btn btn-sm btn-danger" data-id="{{post.id}}">DELETE</button>
+        <button class="btn btn-sm" update-id="{{post.id}}" id ='update'>Update</button>
+        <button class="btn btn-sm btn-danger" delete-id="{{post.id}}">DELETE</button>
       </div>
     </div>
     {{/each}}
