--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,9 +17,12 @@
       </h1>
       <nav>
         {{#if loggedIn}}
-        <a href="/dashboard">Dashboard</a> |
-        <button class="no-button" id="logout">logout</button>
+        <a href="/" id = 'homepage'>Homepage</a>
+        <a href="/dashboard" id = 'dashboard'>Dashboard</a>
+        <button class="no-button" id="logout">Logout</button>
         {{else}}
+        <a href="/" id = 'homepage'>Homepage</a>
+        <a href="/dashboard" id = 'dashboard'>Dashboard</a>
         <a href="/login">Login</a>
         {{/if}}
 
