--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,3 +1,4 @@
+{{!-- is the main dashboard. Minor logic for if there is any posts or not --}}
 <section class="row">
   <div class="col-auto">
     <h2>Your Dashboard</h2>
