--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,4 @@
+{{!-- main homepage. Redirects to login if user is not logged in --}}
 {{#if loggedIn}}
   {{#each posts as |post| }}
   <div class="row mb-4 post">
