--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,3 +1,4 @@
+{{!-- main layout. Includes the nav bar and the title. Minor logic for if someone is logged in or not --}}
 <!DOCTYPE html>
 <html lang="en">
 
