--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,3 +1,4 @@
+{{!-- individual post with comments --}}
 <div class="text-center card">
   <h2>{{title}}</h2>
   <p>{{content}}</p>
@@ -9,7 +10,7 @@
       <textarea class="form-input" id="comment-text" name="comment-text"></textarea>
     </div>
     <div class="form-group">
-      <button type="submit" class="btn btn-primary" data-id="{{id}}">Comment</button>
+      <button type="submit" class="btn btn-primary" comment-id="{{id}}">Comment</button>
     </div>
     </form>
 </div>
